# Eyes_Protection_Reminder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.py  main.py  requirements.txt
.github/: release-drafter.yml
.github/workflows/: build.yml  release.yml
assets/: EPR_icon.rc  default_setting.json
assets/landing/: index.html
assets/landing/assets/: index.1a07c6a5.js  index.d6100461.js  vendor.36a1bcb6.js
docs/: Usage.md  Usage_vi_VN.md
scripts/: build.bat
source/: CMakeLists.txt
source/include/: Application.hpp
source/include/UI/: EPR_icon_32.xpm  EPR_icon_512.xpm  EPR_icon_64.xpm  MainFrame.hpp  MainPanel.hpp  SettingsDialog.hpp  TaskBarIcon.hpp
source/include/Utils/: Config.hpp  Singleton.hpp
source/src/: Application.cpp
source/src/UI/: MainFrame.cpp  MainPanel.cpp  SettingsDialog.cpp  TaskBarIcon.cpp
source/src/Utils/: Config.cpp
src/: CMakeLists.txt  EPR_icon.xpm  EPR_icon_512.xpm  about_dialog.cpp  about_dialog.hpp  application.cpp  application.hpp  config.py  epr_config.py  epr_language.py  epr_schedule.py  epr_system_tray.py  language.py  main.py  main_frame.cpp  main_frame.hpp  system_tray.py
src/assets/landing/assets/: index.c9458aaa.css
src/features/: README.md  relativeLink.py  ultilities.py
src/function/: config.py  schedule.py  tray.py
src/ui/: landing.py  ui.py
src/ui/landing/: index.html  package-lock.json  package.json  tailwind.config.js
src/ui/landing/src/: App.jsx  Message.jsx  index.css
src/ui/landing/src/pages/: FirstPage.jsx  Home.jsx  SecondPage.jsx  ThirdPage.jsx
src/utils/: README.md  relativeLink.py  stateFactory.py
